- Fixed RSS  - deleted portal stuff, it's in a separate rails app now
git-svn-id: http://shrub.ca:8080/svn/swc@52 a73b2e98-c212-4573-bb7c-f9b89b9be6a6

--- a/weblog/app/views/layouts/site.rhtml
+++ b/weblog/app/views/layouts/site.rhtml
@@ -7,8 +7,7 @@
     <meta name="robots" content="index,follow"/>
     <meta name="mssmarttagspreventparsing" content="true"/>
     <%= Site.default_meta_tags %> <%= Site.icbm_meta_tag %> <%= Site.esbn_meta_tag %> <%= Site.issn_meta_tag %>
-    <%= auto_discovery_link_tag :rss, Site.rss_url, :title => 'Primary Feed with Everything' %>
-    <%= auto_discovery_link_tag :rss, Site.posts_rss_url, :title => 'Just the Blog Posts' %>
+    <%= auto_discovery_link_tag :rss, Site.posts_rss_url, :title => 'Simon Says' %>
     <link type="text/css" title="WatStart" rel="Stylesheet" media="screen" href="/stylesheets/inside.css"/>
     <%= javascript_include_tag 'site' %>
     <%= javascript_include_tag 'prototype' %> <%= javascript_include_tag 'effects' %> <%= javascript_include_tag 'lightbox' %>
