Added blog navigation bar on right.
git-svn-id: http://shrub.ca:8080/svn/swc@59 a73b2e98-c212-4573-bb7c-f9b89b9be6a6

--- a/weblog/app/views/layouts/site.rhtml
+++ b/weblog/app/views/layouts/site.rhtml
@@ -24,7 +24,15 @@
           <%= render :partial => 'includes/footer' %>
         </div>
       </div>
-      <%= render :partial => 'includes/right_rail' %>
+      <div id="right-rail">
+        <p>This is the Simon Says weblog -- by Simon Woodside.</p>
+        <p>
+          <a href="/archives" title="Archives">Browse the weblog archives</a>
+        </p>
+        <p>Subscribe to the <%= Site.rss_feed_link %> or the <%= Site.comments_feed_link %>.</p>
+        <p>Tags:</p>
+        <%= Site.list_tags_linked(@tags) %>	
+      </div>
     </div>
     <%= Site.mint_tag %>
     <%= Site.ga_tag %>
