--- a/weblog/app/views/includes/_masthead.rhtml
+++ b/weblog/app/views/includes/_masthead.rhtml
@@ -4,7 +4,7 @@
   </a>
   <div id="semacode-search">
     <form method="get" action="http://www.google.com/search">
-      <input type="hidden" name="sitesearch" value="semacode.com" />
+      <input type="hidden" name="sitesearch" value="simonwoodside.com" />
       <input type="text" name="q" maxlength="255" value="Search" onblur="if(this.value=='') this.value='Search';"
         onfocus="if(this.value=='Search') this.value='';" />
     </form>
