--- a/weblog/app/views/includes/_footer.rhtml
+++ b/weblog/app/views/includes/_footer.rhtml
@@ -1,10 +1,6 @@
 <div id="footer">
   <p>All content
-    &copy; 2002-2007 Semacode Corporation.
+    &copy; 2002-2008 Simon Woodside.
     All rights reserved.
-  </p>
-  <p>
-    Semacode is a trademark of Semacode Corporation.
-    <a href="/company/contact">Contact Us</a>
   </p>
 </div>
