Deleted the upgrade script because I don't need/want that.
Eliminated MOST occurrences of Site.full_url. Why? Because it's totally unnecessary. However in a couple of places it's useful for permalinks and the like.

Added a simple display_404 function in application.rb, useful as a short hand when you need to 404.

Eliminated notfound 'cause I don't need it any more.

git-svn-id: http://shrub.ca:8080/svn/swc@73 a73b2e98-c212-4573-bb7c-f9b89b9be6a6

--- a/weblog/app/views/admin/blacklist/_blacklist_form.rhtml
+++ b/weblog/app/views/admin/blacklist/_blacklist_form.rhtml
@@ -12,6 +12,6 @@ full_blacklist.strip!
 <tr><td class="labels"><label for="tag_name">Current list</label></td><td class="fields">
 <%= text_area_tag 'full_blacklist', full_blacklist, :rows => '34', :cols => '59', :wrap => 'virtual', :class => 'normal_i_width' %><br/><span class="small gray"></td></tr>
 
-<tr><td class="labels"><label for="">Help</label></td><td class="fields"><span class="small gray"><b>How to use the blacklist:</b> Updating the blacklist is simple&mdash;simply add a new line with text you wish to blacklist (an IP address, an email, some words), or delete a current line to remove it from the blacklist. You can also use regular expression syntax. <a href="<%= Site.full_url %>/admin/help#hq15" title="Help: How do I use the blacklist?" target="_blank">See help</a> for details.</span></td></tr>
+<tr><td class="labels"><label for="">Help</label></td><td class="fields"><span class="small gray"><b>How to use the blacklist:</b> Updating the blacklist is simple&mdash;simply add a new line with text you wish to blacklist (an IP address, an email, some words), or delete a current line to remove it from the blacklist. You can also use regular expression syntax. <a href="/admin/help#hq15" title="Help: How do I use the blacklist?" target="_blank">See help</a> for details.</span></td></tr>
 <!--[eoform:tag]-->
 </table>
