--- a/weblog/app/views/admin/comments/_comment_form.rhtml
+++ b/weblog/app/views/admin/comments/_comment_form.rhtml
@@ -29,7 +29,7 @@ ip_listed = true if bl_values.index(@comment.ip)
 --><span id="bl_name_add"<%= ' style="display: none;"' if name_listed %>><!--
 --><%= link_to_remote('Add to blacklist?',
 {
-    :url => Site.full_url + '/admin/blacklist/remote/add/' + CGI::escape(@comment.name),
+    :url => '/admin/blacklist/remote/add/' + CGI::escape(@comment.name),
     :loading => "Element.hide('bl_name_add'); Element.show('bl_name_i');",
     :complete => "Element.hide('bl_name_i'); Element.show('bl_name_remove');",
     :confirm => "Are you sure you wish to blacklist this name?\n\nYou can undo this at any time."
@@ -37,12 +37,12 @@ ip_listed = true if bl_values.index(@comment.ip)
 --><span id="bl_name_remove"<%= ' style="display: none;"' if !name_listed %>><!--
 --><%= link_to_remote('Remove from blacklist?',
 {
-    :url => Site.full_url + '/admin/blacklist/remote/destroy/' + CGI::escape(@comment.name),
+    :url => '/admin/blacklist/remote/destroy/' + CGI::escape(@comment.name),
     :loading => "Element.hide('bl_name_remove'); Element.show('bl_name_i');",
     :complete => "Element.hide('bl_name_i'); Element.show('bl_name_add');",
     :confirm => "Are you sure you wish to remove this item from the blacklist?\n\nYou can always add it back later."
 }) -%></span><!--
---><span id="bl_name_i" style="display: none;"><img src="<%= Site.full_url %>/images/admin/indicator.gif" alt="Working" border="0"/> Working...</span><!--
+--><span id="bl_name_i" style="display: none;"><img src="/images/admin/indicator.gif" alt="Working" border="0"/> Working...</span><!--
 --></span><% end %></td></tr>
 
 <tr><td class="labels"><label for="comment_email"><b>Email</b></label></td><td class="fields">
@@ -50,7 +50,7 @@ ip_listed = true if bl_values.index(@comment.ip)
 --><span id="bl_email_add"<%= ' style="display: none;"' if email_listed %>><!--
 --><%= link_to_remote('Add to blacklist?',
 {
-    :url => Site.full_url + '/admin/blacklist/remote/add/' + CGI::escape(@comment.email),
+    :url => '/admin/blacklist/remote/add/' + CGI::escape(@comment.email),
     :loading => "Element.hide('bl_email_add'); Element.show('bl_email_i');",
     :complete => "Element.hide('bl_email_i'); Element.show('bl_email_remove');",
     :confirm => "Are you sure you wish to blacklist this email?\n\nYou can undo this at any time."
@@ -58,12 +58,12 @@ ip_listed = true if bl_values.index(@comment.ip)
 --><span id="bl_email_remove"<%= ' style="display: none;"' if !email_listed %>><!--
 --><%= link_to_remote('Remove from blacklist?',
 {
-    :url => Site.full_url + '/admin/blacklist/remote/destroy/' + CGI::escape(@comment.email),
+    :url => '/admin/blacklist/remote/destroy/' + CGI::escape(@comment.email),
     :loading => "Element.hide('bl_email_remove'); Element.show('bl_email_i');",
     :complete => "Element.hide('bl_email_i'); Element.show('bl_email_add');",
     :confirm => "Are you sure you wish to remove this item from the blacklist?\n\nYou can always add it back later."
 }) -%></span><!--
---><span id="bl_email_i" style="display: none;"><img src="<%= Site.full_url %>/images/admin/indicator.gif" alt="Working" border="0"/> Working...</span><!--
+--><span id="bl_email_i" style="display: none;"><img src="/images/admin/indicator.gif" alt="Working" border="0"/> Working...</span><!--
 --></span><% end %></td></tr>
 
 <tr><td class="labels"><label for="comment_url">URL</label></td><td class="fields">
@@ -71,7 +71,7 @@ ip_listed = true if bl_values.index(@comment.ip)
 --><span id="bl_url_add"<%= ' style="display: none;"' if url_listed %>><!--
 --><%= link_to_remote('Add to blacklist?',
 {
-    :url => Site.full_url + '/admin/blacklist/remote/add/' + CGI::escape(@comment.url),
+    :url => '/admin/blacklist/remote/add/' + CGI::escape(@comment.url),
     :loading => "Element.hide('bl_url_add'); Element.show('bl_url_i');",
     :complete => "Element.hide('bl_url_i'); Element.show('bl_url_remove');",
     :confirm => "Are you sure you wish to blacklist this URL?\n\nYou can undo this at any time."
@@ -79,12 +79,12 @@ ip_listed = true if bl_values.index(@comment.ip)
 --><span id="bl_url_remove"<%= ' style="display: none;"' if !url_listed %>><!--
 --><%= link_to_remote('Remove from blacklist?',
 {
-    :url => Site.full_url + '/admin/blacklist/remote/destroy/' + CGI::escape(@comment.url),
+    :url => '/admin/blacklist/remote/destroy/' + CGI::escape(@comment.url),
     :loading => "Element.hide('bl_url_remove'); Element.show('bl_url_i');",
     :complete => "Element.hide('bl_url_i'); Element.show('bl_url_add');",
     :confirm => "Are you sure you wish to remove this item from the blacklist?\n\nYou can always add it back later."
 }) -%></span><!--
---><span id="bl_url_i" style="display: none;"><img src="<%= Site.full_url %>/images/admin/indicator.gif" alt="Working" border="0"/> Working...</span><!--
+--><span id="bl_url_i" style="display: none;"><img src="/images/admin/indicator.gif" alt="Working" border="0"/> Working...</span><!--
 --></span><% end %></td></tr>
 
 <tr class="breaker"><td colspan="2">Content</td></tr>
@@ -105,17 +105,17 @@ ip_listed = true if bl_values.index(@comment.ip)
 <% end -%>
 </td></tr>
 
-<tr class="breaker"><td colspan="2"><a class="section_toggler" href="javascript://" onclick="Element.toggle('dt1');Element.toggle('dt2');Element.toggle('dt3');Element.toggle('dt4');Element.toggle('dt_i1');Element.toggle('dt_i2');">Details&nbsp;&nbsp;<img id="dt_i1" src="<%= Site.full_url %>/images/admin/arrow_right.gif" border="0" alt=""/><img id="dt_i2" src="<%= Site.full_url %>/images/admin/arrow_down.gif" border="0" alt="" style="display: none;"/></a></td></tr>
+<tr class="breaker"><td colspan="2"><a class="section_toggler" href="javascript://" onclick="Element.toggle('dt1');Element.toggle('dt2');Element.toggle('dt3');Element.toggle('dt4');Element.toggle('dt_i1');Element.toggle('dt_i2');">Details&nbsp;&nbsp;<img id="dt_i1" src="/images/admin/arrow_right.gif" border="0" alt=""/><img id="dt_i2" src="/images/admin/arrow_down.gif" border="0" alt="" style="display: none;"/></a></td></tr>
 
 <tr id="dt1" style="display: none;"><td class="labels"><label for="comment_post">Post</label></td><td class="fields">
-<%= link_to((comment_post.title == '' ? '[Untitled]' : comment_post.title), Site.full_url + '/admin/posts/edit/' + comment_post.id.to_s, :title => 'Edit this post') %></td></tr>
+<%= link_to((comment_post.title == '' ? '[Untitled]' : comment_post.title), '/admin/posts/edit/' + comment_post.id.to_s, :title => 'Edit this post') %></td></tr>
 
 <tr id="dt2" style="display: none;"><td class="labels"><label for="comment_ip">IP address</label></td><td class="fields">
 <%= @comment.ip %>&nbsp;&nbsp;<span class="small gray"><!--
 --><span id="bl_ip_add"<%= ' style="display: none;"' if ip_listed %>><!--
 --><%= link_to_remote('Add to blacklist?',
 {
-    :url => Site.full_url + '/admin/blacklist/remote/add/' + CGI::escape(@comment.ip),
+    :url => '/admin/blacklist/remote/add/' + CGI::escape(@comment.ip),
     :loading => "Element.hide('bl_ip_add'); Element.show('bl_ip_i');",
     :complete => "Element.hide('bl_ip_i'); Element.show('bl_ip_remove');",
     :confirm => "Are you sure you wish to blacklist this IP address?\n\nYou can undo this at any time."
@@ -123,12 +123,12 @@ ip_listed = true if bl_values.index(@comment.ip)
 --><span id="bl_ip_remove"<%= ' style="display: none;"' if !ip_listed %>><!--
 --><%= link_to_remote('Remove from blacklist?',
 {
-    :url => Site.full_url + '/admin/blacklist/remote/destroy/' + CGI::escape(@comment.ip),
+    :url => '/admin/blacklist/remote/destroy/' + CGI::escape(@comment.ip),
     :loading => "Element.hide('bl_ip_remove'); Element.show('bl_ip_i');",
     :complete => "Element.hide('bl_ip_i'); Element.show('bl_ip_add');",
     :confirm => "Are you sure you wish to remove this item from the blacklist?\n\nYou can always add it back later."
 }) -%></span><!--
---><span id="bl_ip_i" style="display: none;"><img src="<%= Site.full_url %>/images/admin/indicator.gif" alt="Working" border="0"/> Working...</span><!--
+--><span id="bl_ip_i" style="display: none;"><img src="/images/admin/indicator.gif" alt="Working" border="0"/> Working...</span><!--
 --></span></td></tr>
 
 <tr id="dt3" style="display: none;"><td class="labels"><label for="comment_created_at"><b>Created at</b></label></td><td class="fields">
