--- a/weblog/app/views/admin/misc/_ping.rhtml
+++ b/weblog/app/views/admin/misc/_ping.rhtml
@@ -16,4 +16,4 @@
   </div>
 <% end -%>
 
-<div class="pp_close_msg_link"><a class="noback" href="#" onclick="showPingPanel();"><img class="pp_close_img" src="<%= Site.full_url %>/images/admin/close_button.png" /></a><span class="close_text">&nbsp;<a href="#" onclick="showPingPanel();">Close this panel</a></span><br/></div>
+<div class="pp_close_msg_link"><a class="noback" href="#" onclick="showPingPanel();"><img class="pp_close_img" src="/images/admin/close_button.png" /></a><span class="close_text">&nbsp;<a href="#" onclick="showPingPanel();">Close this panel</a></span><br/></div>
