--- a/weblog/app/views/admin/comments/_subnav.rhtml
+++ b/weblog/app/views/admin/comments/_subnav.rhtml
@@ -5,7 +5,7 @@
             This comment is currently <% if @comment.is_approved %><b>approved</b> and can be <%= link_to 'viewed on your site', Post.permalink(@comment.post) + '#c' + @comment.id.to_s, :target => '_blank' %>.<% else -%>unapproved and <b>cannot</b> be viewed on your site.<% end -%>
         </div>
         <div class="sn_right narrower">
-            <%= link_to '&larr; Return to the comments list', Site.full_url + '/admin/comments' %>
+            <%= link_to '&larr; Return to the comments list', '/admin/comments' %>
         </div><br/>
     </div>
 
@@ -13,15 +13,15 @@
     
     <div id="admin_sub_nav">
         <div class="sn_left wider">
-            <% form_tag(Site.full_url + '/admin/comments/search', :id => 'comment_search_form') do -%>
-            <%= link_to '<b>View the blacklist</b>', Site.full_url + '/admin/blacklist' %> or search comments:&nbsp;<%= text_field_tag('q', (params[:q] != '' ? params[:q] : ''), :id => 'sf') %>
+            <% form_tag('/admin/comments/search', :id => 'comment_search_form') do -%>
+            <%= link_to '<b>View the blacklist</b>', '/admin/blacklist' %> or search comments:&nbsp;<%= text_field_tag('q', (params[:q] != '' ? params[:q] : ''), :id => 'sf') %>
             <% end -%>
         </div>
         <div class="sn_right narrower">
         <% if get_pref('COMMENTING_ON') == 'yes' -%>
-            <%= link_to 'Approve', Site.full_url + '/admin/comments/approve/all', :confirm => "You are about to approve all unapproved comments.\n\nAre you ABSOLUTELY sure?" %> or <%= link_to 'delete', Site.full_url + '/admin/comments/delete/unapproved', :confirm => "You are about to delete all unapproved comments. This is permanent.\n\nAre you ABSOLUTELY sure?" %> all unapproved comments?
+            <%= link_to 'Approve', '/admin/comments/approve/all', :confirm => "You are about to approve all unapproved comments.\n\nAre you ABSOLUTELY sure?" %> or <%= link_to 'delete', '/delete/unapproved', :confirm => "You are about to delete all unapproved comments. This is permanent.\n\nAre you ABSOLUTELY sure?" %> all unapproved comments?
         <% else -%>
-            Comments system is turned off. <%= link_to 'Turn it on?', Site.full_url + '/admin/comments/toggle' %>
+            Comments system is turned off. <%= link_to 'Turn it on?', '/admin/comments/toggle' %>
         <% end -%>
         </div><br/>
     </div>
