--- a/weblog/app/views/admin/comments/comment_edit.rhtml
+++ b/weblog/app/views/admin/comments/comment_edit.rhtml
@@ -9,15 +9,15 @@
 <table class="super" cellspacing="0" cellpadding="0">
   <tr>
     <td class="super_left" valign="top" class="no_pad">
-      <% form_tag(Site.full_url + '/admin/comments/update/' + @comment.id.to_s, :id => 'comment_form') do -%>
+      <% form_tag('/admin/comments/update/' + @comment.id.to_s, :id => 'comment_form') do -%>
         <%= render :partial => 'admin/comments/comment_form' %>
-        <div class="submit_area"><%= submit_tag 'Update this comment', :class => 'submit' %> or <%= link_to 'cancel and return to comment list', Site.full_url + '/admin/comments' %></div>
+        <div class="submit_area"><%= submit_tag 'Update this comment', :class => 'submit' %> or <%= link_to 'cancel and return to comment list', '/admin/comments' %></div>
       <% end -%>
       
       <%= observe_form 'comment_form',
           :frequency => 2.5,
           :update => 'preview',
-          :url => Site.full_url + '/admin/comments/preview' %>
+          :url => '/admin/comments/preview' %>
     </td>
     <td class="super_right" valign="top">
       
