--- a/weblog/app/views/admin/comments/comment_list.rhtml
+++ b/weblog/app/views/admin/comments/comment_list.rhtml
@@ -2,7 +2,7 @@
 
 <div id="header">
   <h1 class="skinny"><% if params[:action] == 'comments_by_post' %>Comments for post<% else %>Reader comments<% end %></h1>
-  <h2 class="fat">Gray denotes unapproved comments, click <img id="key_icon" class="light_check" src="<%= Site.full_url %>/images/admin/t.gif" title="Unapproved comment icon"/> icons to toggle.</h2><br/>
+  <h2 class="fat">Gray denotes unapproved comments, click <img id="key_icon" class="light_check" src="/images/admin/t.gif" title="Unapproved comment icon"/> icons to toggle.</h2><br/>
   <% if flash[:notice] %><div class="green flash"><b>Success:</b> <%= flash[:notice] %></div><% end -%>
 </div>
 
@@ -13,7 +13,7 @@
     <th><%= link_to 'Commenter', @sorter.to_link('name') %><%= @sorter.di('name') %></th>
     <th>Excerpt</th>
     <th class="small_col"><%= link_to 'Post', @sorter.to_link('title') %><%= @sorter.di('title') %></th>
-    <th class="approved_col"><%= link_to '<img class="gray_check' + (@sorter.this_col('is_approved') ? ' with_light_bottom' : '') + '" src="' + Site.full_url + '/images/admin/t.gif"/>', @sorter.to_link('is_approved'), :class => 'no_bg' %><%= @sorter.di('is_approved', false) %></th>
+    <th class="approved_col"><%= link_to '<img class="gray_check' + (@sorter.this_col('is_approved') ? ' with_light_bottom' : '') + '" src="' + '/images/admin/t.gif"/>', @sorter.to_link('is_approved'), :class => 'no_bg' %><%= @sorter.di('is_approved', false) %></th>
     <th class="del_col">X</th>
   </tr>
   
@@ -23,15 +23,15 @@
       <% comment_post = comment.post -%>
     <tr id="tca<%= comment.id.to_s%>" class="<% if !comment.is_approved %>inactive <% end %><%= (c%2 == 0 ? 'alt_row ' : '') %><%= (f == 1 ? 'first_row' : '') %>">
       <td class="first_col"><%= comment.created_at.strftime('%d %b, %Y') %></td>
-      <td><%= link_to (comment.name == '' ? '[Anonymous]' : comment.name), Site.full_url + '/admin/comments/edit/' + comment.id.to_s %></td>
+      <td><%= link_to (comment.name == '' ? '[Anonymous]' : comment.name), '/admin/comments/edit/' + comment.id.to_s %></td>
       <td><%= truncate(Post.strip_html(comment.body), 40) %></td>
-      <td class="small_col"><%= link_to (comment_post.title == '' ? '[Untitled]' : comment_post.title), Site.full_url + '/admin/posts/edit/' + comment_post.id.to_s %></td>
+      <td class="small_col"><%= link_to (comment_post.title == '' ? '[Untitled]' : comment_post.title), '/admin/posts/edit/' + comment_post.id.to_s %></td>
       <td class="approved_col"><!--
                 --><span id="yca<%= comment.id.to_s %>"<% if !comment.is_approved %> style="display: none;"<% end %>><!--
                 --><%= link_to_remote(
-          '<img id="ca' + comment.id.to_s + '" class="green_check" src="' + Site.full_url + '/images/admin/t.gif" title="This comment has been approved, click icon to unapprove"/>',
+          '<img id="ca' + comment.id.to_s + '" class="green_check" src="' + '/images/admin/t.gif" title="This comment has been approved, click icon to unapprove"/>',
           {
-              :url => Site.full_url + '/admin/comments/approve/' + comment.id.to_s + '/toggle',
+              :url => '/admin/comments/approve/' + comment.id.to_s + '/toggle',
               :loading => "Element.toggle('pca#{comment.id.to_s}'); Element.hide('yca#{comment.id.to_s}'); Element.hide('nca#{comment.id.to_s}');",
               :complete => "Element.hide('pca#{comment.id.to_s}'); Element.hide('yca#{comment.id.to_s}'); Element.show('nca#{comment.id.to_s}'); Element.addClassName('tca#{comment.id.to_s}', 'inactive')"
           },
@@ -39,17 +39,17 @@
           ) %></span><!--
           --><span id="nca<%= comment.id.to_s %>"<% if comment.is_approved %> style="display: none;"<% end %>><!--
           --><%= link_to_remote(
-          '<img id="ca' + comment.id.to_s + '" class="light_check" src="' + Site.full_url + '/images/admin/t.gif" title="This comment has been not been approved, click icon to approve"/>',
+          '<img id="ca' + comment.id.to_s + '" class="light_check" src="' + '/images/admin/t.gif" title="This comment has been not been approved, click icon to approve"/>',
           {
-              :url => Site.full_url + '/admin/comments/approve/' + comment.id.to_s + '/toggle',
+              :url => '/admin/comments/approve/' + comment.id.to_s + '/toggle',
               :loading => "Element.toggle('pca#{comment.id.to_s}'); Element.hide('yca#{comment.id.to_s}'); Element.hide('nca#{comment.id.to_s}');",
               :complete => "Element.hide('pca#{comment.id.to_s}'); Element.show('yca#{comment.id.to_s}'); Element.hide('nca#{comment.id.to_s}'); Element.removeClassName('tca#{comment.id.to_s}', 'inactive')"
           },
           :class => 'no_bg'
           ) %></span><!--
-      --><span id="pca<%= comment.id.to_s %>" style="display: none;"><img src="<%= Site.full_url %>/images/admin/indicator.gif" alt="Working" border="0" class="center_indicator"/></span><!--
+      --><span id="pca<%= comment.id.to_s %>" style="display: none;"><img src="/images/admin/indicator.gif" alt="Working" border="0" class="center_indicator"/></span><!--
       --></td>
-      <td class="del_col"><%= link_to 'X', Site.full_url + '/admin/comments/destroy/' + comment.id.to_s, :confirm => "You are about to delete this comment. This is permanent.\n\nAre you ABSOLUTELY sure?" %></td>
+      <td class="del_col"><%= link_to 'X', '/admin/comments/destroy/' + comment.id.to_s, :confirm => "You are about to delete this comment. This is permanent.\n\nAre you ABSOLUTELY sure?" %></td>
     </tr>
     <% c = (c == 1 ? c+1 : c = 1) -%>
     <% f = f+1 -%>
