--- a/weblog/app/views/admin/misc/_help_options.rhtml
+++ b/weblog/app/views/admin/misc/_help_options.rhtml
@@ -3,7 +3,7 @@
 
 <p>You have three options for SimpleLog help:</p>
 
-<p><a class="bigger" href="<%= Site.full_url %>/admin/help" title="FAQs">FAQs</a> (available offline)<br/>
+<p><a class="bigger" href="/admin/help" title="FAQs">FAQs</a> (available offline)<br/>
 Answers to some frequently asked questions about SimpleLog.</p>
 
 <p><a class="bigger" href="http://wiki.simplelog.net" title="SimpleLog wiki" target="_blank">SimpleLog Wiki</a> (requires net connection)<br/>
@@ -12,4 +12,4 @@ The biggest resource of developer- and user-generated SimpleLog documentation an
 <p><a class="bigger" href="mailto:support@simplelog.net" title="Email us">Email the developer</a><br/>
 Intended as a last resort. We try to answer all questions promptly but there may be a delay.</p>
 
-<div class="pp_close_msg_link"><a class="noback" href="#" onclick="showHelpPanel();"><img class="pp_close_img" src="<%= Site.full_url %>/images/admin/close_button.png" /></a><span class="close_text">&nbsp;<a href="#" onclick="showHelpPanel();">Close this panel</a></span><br/></div>
+<div class="pp_close_msg_link"><a class="noback" href="#" onclick="showHelpPanel();"><img class="pp_close_img" src="/images/admin/close_button.png" /></a><span class="close_text">&nbsp;<a href="#" onclick="showHelpPanel();">Close this panel</a></span><br/></div>
