--- a/weblog/app/views/admin/pages/_page_form.rhtml
+++ b/weblog/app/views/admin/pages/_page_form.rhtml
@@ -17,7 +17,7 @@
 <%= text_field 'page', 'title', :class => 'normal_i_width' %></td></tr>
 
 <tr><td class="labels"><label for="page_body_raw"><b>Body</b></label></td><td class="fields">
-<%= javascript_include_tag Site.full_url + '/javascripts/widgEditor.js' %>
+<%= javascript_include_tag '/javascripts/widgEditor.js' %>
 <%= text_area 'page', 'body_raw', :rows => '28', :cols => '59', :wrap => 'virtual', :class => 'normal_i_width widgEditor' %><br/><span id="markdown_syntax_link" class="small gray"<%= ' style="display: none;"' unless (params[:action] == 'page_new' and get_pref('TEXT_FILTER') == 'markdown') or (params[:action] != 'page_new' and @page.text_filter == 'markdown') %>><b>Markdown</b> syntax enabled. See the <%= link_to('syntax rules', 'http://daringfireball.net/projects/markdown/syntax', :title => 'Syntax rules', :target => '_blank') %> for help.</span>
 
 <span id="textile_syntax_link" class="small gray"<%= ' style="display: none;"' unless (params[:action] == 'page_new' and get_pref('TEXT_FILTER') == 'textile') or (params[:action] != 'page_new' and @page.text_filter == 'textile') %>><b>Textile</b> syntax enabled. See the <%= link_to('syntax rules', 'http://www.textism.com/tools/textile/', :title => 'Syntax rules', :target => '_blank') %> for help.</span>
@@ -26,7 +26,7 @@
 
 <span id="plaintext_syntax_link" class="small gray"<%= ' style="display: none;"' unless (params[:action] == 'page_new' and get_pref('TEXT_FILTER') == 'plain text') or (params[:action] != 'page_new' and @page.text_filter == 'plain text') %>><b>Plain text</b> mode enabled.</span></td></tr>
 
-<tr class="breaker"><td colspan="2"><a class="section_toggler" href="javascript://" onclick="Element.toggle('dt1');Element.toggle('dt2');Element.toggle('dt_i1');Element.toggle('dt_i2');">Details&nbsp;&nbsp;<img id="dt_i1" src="<%= Site.full_url %>/images/admin/arrow_right.gif" border="0" alt=""/><img id="dt_i2" src="<%= Site.full_url %>/images/admin/arrow_down.gif" border="0" alt="" style="display: none;"/></a></td></tr>
+<tr class="breaker"><td colspan="2"><a class="section_toggler" href="javascript://" onclick="Element.toggle('dt1');Element.toggle('dt2');Element.toggle('dt_i1');Element.toggle('dt_i2');">Details&nbsp;&nbsp;<img id="dt_i1" src="/images/admin/arrow_right.gif" border="0" alt=""/><img id="dt_i2" src="/images/admin/arrow_down.gif" border="0" alt="" style="display: none;"/></a></td></tr>
 
 <tr id="dt1" style="display: none;"><td class="labels"><label for="page_is_active">Is active?</label></td><td class="fields">
 <%= check_box 'page', 'is_active', :checked => (@page.is_active ? 'checked' : '') %><label for="page_is_active" class="left">&nbsp;<span class="small gray">If the box is checked, the page is available on your site</span></label></td></tr>
