--- a/weblog/app/views/admin/pages/page_edit.rhtml
+++ b/weblog/app/views/admin/pages/page_edit.rhtml
@@ -9,21 +9,21 @@
 <table class="super" cellspacing="0" cellpadding="0">
   <tr>
     <td class="super_left" valign="top" class="no_pad">
-      <% form_tag(Site.full_url + '/admin/pages/update/' + @page.id.to_s, :id => 'page_form') do %>
+      <% form_tag('/admin/pages/update/' + @page.id.to_s, :id => 'page_form') do %>
         <%= render :partial => 'admin/pages/page_form' %>
-        <div class="submit_area"><%= submit_tag 'Update this page', :class => 'submit' %> or <%= link_to 'cancel and return to page list', Site.full_url + '/admin/pages' %></div>
+        <div class="submit_area"><%= submit_tag 'Update this page', :class => 'submit' %> or <%= link_to 'cancel and return to page list', '/admin/pages' %></div>
       <% end -%>
       
       <%= observe_field 'page_permalink',
               :frequency => 2.5,
               :update => 'the_link',
               :with => "'value=' + $F('page_permalink')",
-                :url => Site.full_url + '/admin/pages/permalink' %>
+                :url => '/admin/pages/permalink' %>
                 
       <%= observe_form 'page_form',
           :frequency => 2.5,
           :update => 'preview',
-          :url => Site.full_url + '/admin/pages/preview' %>
+          :url => '/admin/pages/preview' %>
     </td>
     <td class="super_right" valign="top">
       
