--- a/weblog/app/views/admin/tags/_subnav.rhtml
+++ b/weblog/app/views/admin/tags/_subnav.rhtml
@@ -5,7 +5,7 @@
             You're creating a new tag.
         </div>
         <div class="sn_right">
-            <%= link_to '&larr; Return to the tags list', Site.full_url + '/admin/tags' %>
+            <%= link_to '&larr; Return to the tags list', '/admin/tags' %>
         </div><br/>
     </div>
     
@@ -16,11 +16,11 @@
             <% if @posts.length < 1 %>
                There are no posts currently tagged with &quot;<%= (@tag.name and @tag.name != '' ? @tag.name : params[:old_name]) %>&quot;
             <% else %>
-                <%= link_to '<b>View a list</b>', Site.full_url + '/admin/tags/show/' + @tag.id.to_s %> of posts tagged with &quot;<%= (@tag.name and @tag.name != '' ? @tag.name : params[:old_name]) %>&quot; (currently: <%= @posts.length.to_s %>)
+                <%= link_to '<b>View a list</b>', '/admin/tags/show/' + @tag.id.to_s %> of posts tagged with &quot;<%= (@tag.name and @tag.name != '' ? @tag.name : params[:old_name]) %>&quot; (currently: <%= @posts.length.to_s %>)
             <% end %>
         </div>
         <div class="sn_right">
-            <%= link_to '&larr; Return to the tags list', Site.full_url + '/admin/tags' %>
+            <%= link_to '&larr; Return to the tags list', '/admin/tags' %>
         </div><br/>
     </div>
     
@@ -28,19 +28,19 @@
 
     <div id="admin_sub_nav">
         <div class="sn_left">
-            <%= link_to '<b>Go back to this tag</b>', Site.full_url + '/admin/tags/edit/' + @tag.id.to_s %> to continue editing.
+            <%= link_to '<b>Go back to this tag</b>', '/admin/tags/edit/' + @tag.id.to_s %> to continue editing.
         </div>
         <div class="sn_right">
-            <%= link_to '&larr; Return to the tags list', Site.full_url + '/admin/tags' %>
+            <%= link_to '&larr; Return to the tags list', '/admin/tags' %>
         </div><br/>
     </div>
 
 <% else %>
     
-    <% form_tag(Site.full_url + '/admin/tags/search', :id => 'tag_search_form') do %>
+    <% form_tag('/admin/tags/search', :id => 'tag_search_form') do %>
     <div id="admin_sub_nav">
         <div class="sn_left">
-            <%= link_to '<b>Create a new tag</b>', Site.full_url + '/admin/tags/new' %> or search them:&nbsp;<%= text_field_tag('q', (params[:q] != '' ? params[:q] : ''), :id => 'sf') %>
+            <%= link_to '<b>Create a new tag</b>', '/admin/tags/new' %> or search them:&nbsp;<%= text_field_tag('q', (params[:q] != '' ? params[:q] : ''), :id => 'sf') %>
         </div>
         <div class="sn_right">
             Merge tags by renaming them to the same name.
