--- a/weblog/app/views/admin/tags/tag_new.rhtml
+++ b/weblog/app/views/admin/tags/tag_new.rhtml
@@ -5,8 +5,8 @@
   <h2>Required fields in <b>bold</b>.</h2><br/>
 </div>
 
-<% form_tag(Site.full_url + '/admin/tags/create', :id => 'tag_form') do %>
+<% form_tag('/admin/tags/create', :id => 'tag_form') do %>
   <%= render :partial => 'admin/tags/tag_form' %>
-  <div class="submit_area"><%= submit_tag 'Create new tag', :class => 'submit' %> or <%= link_to 'cancel and return to tag list', Site.full_url + '/admin/tags' %></div>
+  <div class="submit_area"><%= submit_tag 'Create new tag', :class => 'submit' %> or <%= link_to 'cancel and return to tag list', '/admin/tags' %></div>
 <% end -%>
 <br/>
