--- a/weblog/app/views/layouts/admin.rhtml
+++ b/weblog/app/views/layouts/admin.rhtml
@@ -2,12 +2,12 @@
 <head>
   <title><%= 'SimpleLog: ' + $admin_page_title %></title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-  <%= stylesheet_link_tag Site.full_url + '/stylesheets/admin.css' %>
-  <%= javascript_include_tag Site.full_url + '/javascripts/admin.js' %>
-  <%= javascript_include_tag Site.full_url + '/javascripts/prototype.js' %>
-  <%= javascript_include_tag Site.full_url + '/javascripts/effects.js' %>
-  <%= javascript_include_tag Site.full_url + '/javascripts/dragdrop.js' %>
-  <%= javascript_include_tag Site.full_url + '/javascripts/controls.js' %>
+  <%= stylesheet_link_tag '/stylesheets/admin.css' %>
+  <%= javascript_include_tag '/javascripts/admin.js' %>
+  <%= javascript_include_tag '/javascripts/prototype.js' %>
+  <%= javascript_include_tag '/javascripts/effects.js' %>
+  <%= javascript_include_tag '/javascripts/dragdrop.js' %>
+  <%= javascript_include_tag '/javascripts/controls.js' %>
   <%= wym_editor_initialize %>
   <style type="text/css">
     .wym_skin_default .wym_iframe iframe { height: 400px !important; }
@@ -53,19 +53,19 @@ cb = (comments_sys_on == 'yes')
 %>
 <div id="admin_nav">
   <ul class="navlist">
-    <li><a accesskey="1" href="<%= Site.full_url %>/admin/posts" title="Posts"<%= ' class="current"' if params[:action][0..3] == 'post' %>>Posts</a>&nbsp;<a accesskey="n" href="<%= Site.full_url %>/admin/posts/new" title="Create a new post"><img src="<%= Site.full_url %>/images/admin/new_button.png" id="new_post_button" alt="Create a new post" border="0"/></a></li>
-    <li><a accesskey="2" href="<%= Site.full_url %>/admin/pages" title="Pages"<%= ' class="current"' if params[:action][0..3] == 'page' %>>Pages</a></li>
-    <% if cb %><li><a accesskey="3" href="<%= Site.full_url %>/admin/comments" title="Comments"<%= ' class="current"' if (params[:action][0..6] == 'comment' or params[:action][0..8] == 'blacklist') %>>Comments</a></li><% end %>
-    <li><a accesskey="<%= (cb ? '4' : '3') %>" href="<%= Site.full_url %>/admin/tags" title="Tags"<%= ' class="current"' if params[:action][0..2] == 'tag' %>>Tags</a></li>
-    <li><a accesskey="<%= (cb ? '5' : '4') %>" href="<%= Site.full_url %>/admin/authors" title="Authors"<%= ' class="current"' if params[:action][0..5] == 'author' %>>Authors</a></li>
-    <li class="end"><a accesskey="<%= (cb ? '6' : '5') %>" id="ping_obj" href="<%= Site.full_url %>/admin/ping" title="Ping"<%= ' class="current"' if params[:action][0..3] == 'ping' %> onclick="showPingPanel(); return false;">Ping</a></li>
+    <li><a accesskey="1" href="/admin/posts" title="Posts"<%= ' class="current"' if params[:action][0..3] == 'post' %>>Posts</a>&nbsp;<a accesskey="n" href="/admin/posts/new" title="Create a new post"><img src="/images/admin/new_button.png" id="new_post_button" alt="Create a new post" border="0"/></a></li>
+    <li><a accesskey="2" href="/admin/pages" title="Pages"<%= ' class="current"' if params[:action][0..3] == 'page' %>>Pages</a></li>
+    <% if cb %><li><a accesskey="3" href="/admin/comments" title="Comments"<%= ' class="current"' if (params[:action][0..6] == 'comment' or params[:action][0..8] == 'blacklist') %>>Comments</a></li><% end %>
+    <li><a accesskey="<%= (cb ? '4' : '3') %>" href="/admin/tags" title="Tags"<%= ' class="current"' if params[:action][0..2] == 'tag' %>>Tags</a></li>
+    <li><a accesskey="<%= (cb ? '5' : '4') %>" href="/admin/authors" title="Authors"<%= ' class="current"' if params[:action][0..5] == 'author' %>>Authors</a></li>
+    <li class="end"><a accesskey="<%= (cb ? '6' : '5') %>" id="ping_obj" href="/admin/ping" title="Ping"<%= ' class="current"' if params[:action][0..3] == 'ping' %> onclick="showPingPanel(); return false;">Ping</a></li>
   </ul>
   <ul class="navlist right">
-      <li><a accesskey="p" href="<%= Site.full_url %>/admin/prefs" title="Preferences"<%= ' class="current"' if params[:action][0..4] == 'prefs' %>>Preferences</a></li>
-    <li><a accesskey="u" href="<%= Site.full_url %>/admin/updates" title="Updates"<%= ' class="current"' if params[:action] == 'updates' %>>Updates</a></li>
-    <li><a accesskey="h" id="help_obj" href="<%= Site.full_url %>/admin/help" title="Help"<%= ' class="current"' if params[:action] == 'help' %> onclick="showHelpPanel(); return false;">Help</a></li>
-    <li><a accesskey="l" href="<%= Site.full_url %>/logout" title="Logout">Logout</a></li>
-    <li class="end"><a accesskey="v" href="/" target="_blank" title="View Site">View Site</a></li>
+      <li><a accesskey="p" href="/admin/prefs" title="Preferences"<%= ' class="current"' if params[:action][0..4] == 'prefs' %>>Preferences</a></li>
+    <li><a accesskey="u" href="/admin/updates" title="Updates"<%= ' class="current"' if params[:action] == 'updates' %>>Updates</a></li>
+    <li><a accesskey="h" id="help_obj" href="/admin/help" title="Help"<%= ' class="current"' if params[:action] == 'help' %> onclick="showHelpPanel(); return false;">Help</a></li>
+    <li><a accesskey="l" href="/logout" title="Logout">Logout</a></li>
+    <li class="end"><a accesskey="v" href="/" title="View Site">View Site</a></li>
   </ul><br/>
 </div>
   
