--- a/weblog/app/views/layouts/admin_login.rhtml
+++ b/weblog/app/views/layouts/admin_login.rhtml
@@ -2,7 +2,7 @@
 <head>
   <title>SimpleLog: Log in</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
-  <%= stylesheet_link_tag Site.full_url + '/stylesheets/admin.css' %>
+  <%= stylesheet_link_tag '/stylesheets/admin.css' %>
 </head>
 <body onload="doFieldSelect(document.forms['login_form'].elements['author[email]'].focus());">
   
