--- a/weblog/app/views/posts/_item.rhtml
+++ b/weblog/app/views/posts/_item.rhtml
@@ -4,6 +4,7 @@
   <div class="item_details">
     <h3><%= post.title %></h3>
     <h4>Posted <%= author_info(post) %> on <%= date_time_linked(post) %></h4>
+    <h4>Tags: <%= tag_info(post) %></h4>
   </div>
   <div class="item_content">
     <%= auto_link(post.body) %>
@@ -13,7 +14,7 @@
     <%# Copy this into your view if you want to show comment information -%>
     <% if Site.comment_system_on %><span class="item_comments">Comments: <%= comment_info(post) %></span><% end %>
     <%# End comment information -%>
-    <span class="item_tags">Tags: <%= tag_info(post) %></span>
+    
   </div>
 </div>
 
