Added google webmaster tools Enhance 404 pages to 404 page.
git-svn-id: http://shrub.ca:8080/svn/swc@80 a73b2e98-c212-4573-bb7c-f9b89b9be6a6

--- a/weblog/app/views/errors/unknown_request.rhtml
+++ b/weblog/app/views/errors/unknown_request.rhtml
@@ -1,3 +1,20 @@
 <div class="item">
-  <p><b>Sorry</b>, but I couldn't find what you're looking for. Feel free to search or contact the author of this site.</p>
+  <h1>Sorry, the page you requested could not be found</h1>
+  <p>
+    <b>Sorry</b>, but I couldn't find what you're looking for.
+    Feel free to search or contact the author of this site.
+  </p>
+  <style type="text/css">
+    #goog-wm { }
+    #goog-wm h3.closest-match { }
+    #goog-wm h3.closest-match a { }
+    #goog-wm h3.other-things { }
+    #goog-wm ul li { }
+    #goog-wm li.search-goog { display: block; }
+  </style>
+  <script type="text/javascript">
+    var GOOG_FIXURL_LANG = 'en';
+    var GOOG_FIXURL_SITE = 'http://simonwoodside.com/';
+  </script>
+  <script type="text/javascript" src="http://linkhelp.clients.google.com/tbproxy/lh/wm/fixurl.js"></script>
 </div>
