Fixed some minor UI issues.
git-svn-id: http://shrub.ca:8080/svn/swc@101 a73b2e98-c212-4573-bb7c-f9b89b9be6a6

--- a/weblog/app/views/includes/_masthead.rhtml
+++ b/weblog/app/views/includes/_masthead.rhtml
@@ -1,6 +1,6 @@
 <div id="top">
   <a href="/" id="home-button">
-    <img src="http://watstart.ca/themes/watstart/images/invisible.gif" width="122" height="39" alt="Home" />
+    <img src="/images/invisible.gif" width="122" height="39" alt="Home" />
   </a>
   <div id="semacode-search">
     <form method="get" action="http://www.google.com/search">
