--- a/weblog/app/views/admin/posts/post_list.rhtml
+++ b/weblog/app/views/admin/posts/post_list.rhtml
@@ -1,41 +1,44 @@
-<% comments_on = get_pref('COMMENTING_ON') -%>
+<% comments_on = get_pref('COMMENTING_ON') %>
+<%# TODO: change to display comments "off" column even if comments are on, to simplify %>
+
 <%= render :partial => 'admin/posts/subnav', :locals => {:np => false, :ep => false} %>
 
 <div id="header">
   <h1 class="skinny">Your posts</h1>
   <h2 class="fat">Gray denotes inactive posts, rows with <span class="future_key">lined background</span> are future posts.</h2><br/>
-  <% if flash[:notice] %><div class="green flash"><b>Success:</b> <%= flash[:notice] %></div><% end -%>
+  <% if flash[:notice] %><div class="green flash"><b>Success:</b> <%= flash[:notice] %></div><% end %>
 </div>
 
 <table class="list" cellspacing="0" cellpadding="0">
-  
   <tr>
     <th class="first_col"><%= link_to 'Created', @sorter.to_link('created_at') %><%= @sorter.di('created_at') %></th>
     <th><%= link_to 'Title', @sorter.to_link('title') %><%= @sorter.di('title') %></th>
     <th>Excerpt</th>
     <% if comments_on == 'yes' %><th class="small_col"><%= link_to 'Comments', @sorter.to_link('comments_count') %><%= @sorter.di('comments_count') %></th><% end %>
+    <th>View</th>
     <th class="del_col">X</th>
   </tr>
   
-  <% c = 1 -%>
-  <% f = 1 -%>
-  <% for post in @posts -%>
-    <tr class="<% if post.created_at > Time.sl_local %>futurepost <% end %><% if !post.is_active %>inactive <% end %><%= (c%2 == 0 ? 'alt_row ' : '') %><%= (f == 1 ? 'first_row' : '') %>">
+  <% c = 1 %><% f = 1 %> <%# these alternate row colours %>
+  <% @posts.each do |post| %>
+    <tr class="<%= 'futurepost' if post.created_at > Time.sl_local %><%= 'inactive' if !post.is_active %><%= (c%2 == 0 ? 'alt_row ' : '') %><%= (f == 1 ? 'first_row' : '') %>">
       <td class="first_col"><%= post.created_at.strftime('%d %b, %Y') %></td>
       <td><%= link_to (post.title == '' ? '[Untitled]' : truncate(post.title, (comments_on == 'yes' ? 30 : 40))), '/admin/posts/edit/' + post.id.to_s %></td>
       <td><% tmpc = truncate(Post.strip_html(post.body), (comments_on == 'yes' ? 55 : 65)) %><%= (tmpc != '' ? tmpc : '&nbsp;') %></td>
-      <% if comments_on == 'yes' %><td class="small_col"><%= post.comments.length %></td><% end %>
+      <% if comments_on == 'yes' %>
+        <td class="small_col"><%= post.comments.length > 0  ? link_to( "#{post.comments.length} comments", '/admin/comments/bypost/' + post.id.to_s ) : "none" %></td>
+      <% end %>
+      <td><%= link_to '&raquo;', Post.permalink(post) %><%# why doesn't that work? %></#></td>
       <td class="del_col"><%= link_to 'X', '/admin/posts/destroy/' + post.id.to_s, :confirm => "You are about to delete this post. This is permanent.\n\nAre you ABSOLUTELY sure?" %></td>
     </tr>
-    <% c = (c == 1 ? c+1 : c = 1) -%>
-    <% f = f+1 -%>
-  <% end -%>
-  <% unless @posts.length > 0 -%>
-  <tr class="first_row"><td class="first_col" colspan="<% if comments_on == 'yes' %>5<% else %>4<% end %>"><span class="gray">There are no posts at this time.</span></td></tr>
-  <% end -%>
+    <% c = (c == 1 ? c+1 : c = 1) %><% f = f+1 %>
+  <% end %>
+  <% unless @posts.length > 0 %>
+    <tr class="first_row"><td class="first_col" colspan="<% if comments_on == 'yes' %>6<% else %>5<% end %>"><span class="gray">There are no posts at this time.</span></td></tr>
+  <% end %>
   <% if @post_pages %>
   <tr class="header">
-    <th colspan="<% if comments_on == 'yes' %>5<% else %>4<% end %>">
+    <th colspan="<% if comments_on == 'yes' %>6<% else %>5<% end %>">
       <div class="pagination">
         <div class="prev">
           <%= link_to '&laquo; Previous page', { :sort => params[:sort], :page => @post_pages.current.previous } if @post_pages.current.previous %>
